# pydentity

./: CODE_OF_CONDUCT.md  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  security.yml
features/: identity.feature  parse_string.feature  typed_identity.feature
features/steps/: common_steps.py  identity_steps.py  parse_string_steps.py  typed_identity_steps.py
src/: identity.py  parse_string.py
