[tool.poetry]
name = "pydentity"
version = "0.0.8"
description = "Identity functions."
authors = ["Andreas Stassivik <andreas@stassi.net>"]
license = "MPL-2.0"
readme = "README.md"

# Supported Operating Systems: ["macOS Monterey 12", "Ubuntu 22.04", "Windows Server 2022"]

[tool.poetry.dependencies]
python = "^3.10 || ^3.11"

[tool.poetry.group.test.dependencies]
behave = "^1.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
